# test

./: .gitattributes  java打包exe.md
mobile_platform_creator/: README.md  __init__.py  build.gradle  gradle.properties  local.properties  main.py  mobile_platform.keystore  requirements.txt  settings.gradle  test_js_runtime.py
mobile_platform_creator/android/: README.md  build.gradle  build.sh  local.properties  proguard-rules.pro
mobile_platform_creator/android/gradle/: build.gradle
mobile_platform_creator/android/native/: CMakeLists.txt
mobile_platform_creator/android/native/seccomp/: seccomp_filter.c
mobile_platform_creator/android/native/wasm/: wasm_runtime.c
mobile_platform_creator/android/release/: output-metadata.json
mobile_platform_creator/cli/: __init__.py  android_tools.py  app_manager.py  sandbox_tester.py
mobile_platform_creator/core/: __init__.py
mobile_platform_creator/core/builder/: __init__.py
mobile_platform_creator/core/deployment/: __init__.py
mobile_platform_creator/core/js_runtime/: __init__.py  js_api.py  (+2 more)
mobile_platform_creator/docs/: developer_guide.md  development_setup.md  mpk_format_specification.md
mobile_platform_creator/tests/: __init__.py  test_integration.py  test_js_runtime.py
mobile_platform_creator/ui/: __init__.py
mobile_platform_creator/utils/: __init__.py  app_launcher.py  app_store.py  app_updater.py  mpk_format.py  mpk_generator.py  mpk_installer.py  mpk_manager.py  mpk_package.py  mpk_packager.py  mpk_parser.py  mpk_tool.py  mpk_unpacker.py  mpk_validator.py
test/my_app_platform/: app.py  readme.md
(+216 files in other folders)
